run unit test in new stage